Fix reveal button on Minerva to avoid overlaps on RecentChanges and Watchlist
Bug: T331001

--- a/modules/ext.checkUser.styles/temporaryaccount.minerva.less
+++ b/modules/ext.checkUser.styles/temporaryaccount.minerva.less
@@ -7,6 +7,11 @@
 		float: none;
 		margin-top: -5px;
 		margin-right: 0;
+
+		.oo-ui-buttonElement-button {
+			padding: 1px;
+			min-height: 0;
+		}
 	}
 }
 
